# streamlit_sigmajs_component

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
streamlit_lite/: index.html  readme.md  test_data.json
vsigma_component/: __init__.py  example.py  style.css  test_data.py  tools.py
vsigma_component/vue_sigma/: .gitignore  index.html
vsigma_component/vue_sigma/src/: App.vue
vsigma_component/vue_sigma/src/components/: VSigma.vue
vsigma_component/vue_sigma/src/streamlit/: WithStreamlitConnection.vue
